--- a/stylesheet.css
+++ b/stylesheet.css
@@ -149,9 +149,9 @@ img {
    position: fixed;
    top: 0;
    left: 0;
-   width: 28%;
-   height: auto;
-   padding: 20px 0;
+   width: 35%;
+   height: 100%;
+   padding:  0;
    transition: all 0.5s ease;
  }
 
