--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,10 +2,21 @@ body {
   background-color: white;
 }
 
+.mission {
+  text-align: center;
+  font-size: medium;
+  font-family:'Arial Narrow Bold';
+  position: absolute;
+  border: 5px solid black;
+  width: 400px;
+  margin-left: 540px;
+  border-width: 10px;
+  
+}
 
 h2, h1 {
   text-align: center;
-  margin-left: -5%;
+  margin-left: 0px;
   color: red;
   font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     overflow: hidden;
@@ -24,7 +35,7 @@ h2, h1 {
 .logo {
   width: 175px;
   height: auto;
-  margin-left: 675px;
+  margin-left: 680px;
 }
 @-webkit-keyframes flash {
   0%, 50%, 100% { opacity: 1;}
@@ -41,14 +52,15 @@ h2, h1 {
 }
 
 .wrapper .sidebar {
- background: rgb(2, 0, 15);
- position: fixed;
+ background: rgb(3, 1, 14);
+ position: absolute;
  top: 0;
  left: 0;
  width: 200px;
- height: 100%;
+ height: 200%;
  padding: 20px 0;
  transition: all 0.5s ease;
+ 
 }
 .wrapper .sidebar .profile {
  margin-bottom: 30px;
@@ -95,15 +107,34 @@ h2, h1 {
 img {
   width: 15%;
   height: auto;
-  margin-left: 40%;
+  margin-left: 35%;
 }
 
 
  /* Mobile CSS */
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 900px) {
   body {
     background-color: rgb(255, 255, 255);
+  }
+
+  .mission {
+    text-align: center;
+  font-size: small;
+  font-family:'Arial Narrow Bold';
+  position: absolute;
+  border: 5px solid black;
+  width: 125px;
+  height: auto;
+  margin-left: 100px;
+  border-width: 10px; 
+  
+}
+
+  img {
+    width: 15%;
+    height: auto;
+    margin-left: 43%;
   }
   i {
     margin-right: 5px;
@@ -150,8 +181,8 @@ img {
    top: 0;
    left: 0;
    width: 35%;
-   height: 100%;
-   padding:  0;
+   height: 600px;
+   padding: 20px 0;
    transition: all 0.5s ease;
  }
 
