--- a/stylesheet.css
+++ b/stylesheet.css
@@ -124,9 +124,9 @@ img {
   font-family:'Arial Narrow Bold';
   position: absolute;
   border: 5px solid black;
-  width: 125px;
+  width: 200px;
   height: auto;
-  margin-left: 100px;
+  margin-left: 55%;
   border-width: 10px; 
   
 }
