--- a/stylesheet.css
+++ b/stylesheet.css
@@ -197,7 +197,7 @@ img {
 
 .wrapper .sidebar {
    background: rgb(2, 0, 15);
-   position: fixed;
+   position: scroll;
    top: 0;
    left: 0;
    width: 35%;
