--- a/stylesheet.css
+++ b/stylesheet.css
@@ -142,7 +142,7 @@ img {
     text-align: center;
   font-size: small;
   font-family:'Arial Narrow Bold';
-  position: fixed;
+  position: absolute;
   border: 5px solid black;
   width: 200px;
   height: 400px;
